[gd_scene load_steps=7 format=3 uid="uid://blskm5dspisxq"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_wcrx0"]
[ext_resource type="Texture2D" uid="uid://blenomnmpucer" path="res://assets/cars/png/car_05_v2.png" id="2_tpbd6"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_fx7ag"]
friction = 4.0
rough = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aab18"]
size = Vector2(35.638, 81.8643)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_372qo"]
size = Vector2(16.593, 39.4441)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_haj8u"]
properties/0/path = NodePath("DriftScoreTimer:one_shot")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Area2D:position")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Camera2D:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Camera2D:enabled")
properties/5/spawn = true
properties/5/replication_mode = 1

[node name="Main" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_fx7ag")
contact_monitor = true
max_contacts_reported = 1
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource("1_wcrx0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_tpbd6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.308151, 0.0249743)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_aab18")

[node name="Area2D" type="Area2D" parent="."]

[node name="DriftCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.107618, 1.34964)
shape = SubResource("RectangleShape2D_372qo")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.3, 1.3)
limit_left = -1482
limit_top = -1536
limit_right = 2432
limit_bottom = 1024

[node name="DriftScoreTimer" type="Timer" parent="."]
one_shot = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_haj8u")
visibility_update_mode = 1

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="DriftScoreTimer" to="." method="_on_drift_score_timer_timeout"]
